--- a/src/fonts/fonts.scss
+++ b/src/fonts/fonts.scss
@@ -13,3 +13,19 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Quicksand';
+	src: url('Quicksand/Quicksand-Regular.eot');
+	src: local('☺'), url('Quicksand/Quicksand-Regular.woff') format('woff'), url('Quicksand/Quicksand-Regular.ttf') format('truetype'), url('Quicksand/Quicksand-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Quicksand';
+	src: url('Quicksand/Quicksand-Bold.eot');
+	src: local('☺'), url('Quicksand/Quicksand-Bold.woff') format('woff'), url('Quicksand/Quicksand-Bold.ttf') format('truetype'), url('Quicksand/Quicksand-Bold.svg') format('svg');
+	font-weight: bold;
+	font-style: normal;
+}
