--- a/src/index.pug
+++ b/src/index.pug
@@ -5,41 +5,4 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		title Document
 	body
-	include UI_kit/form-elements/components/field/field
-	mixin footer(options = {icons: [], items: {}})
-		-
-			const icons = options.icons || ["twitter", "facebook", "instagram"]
-			const items = options.items || {
-				"навигация": [ "О нас", "Новости", "Служба поддержки", "Услуги"],
-				"О нас": ["О сервисе", "Наша команда", "Вакансии", "Инвесторы"],
-				"Служба поддержки": ["Соглашения", "Сообщества", "Связь с нами"],
-				"Подписка": ["Получайте специальные предложения и новости сервиса", "field"]
-			}
-
-		footer.footer
-			.footer__main
-				.footer__main-container
-					.footer__main-info
-						p.footer__main-description
-							|Бронирование номеров в лучшем
-							|отеле 2019 года по версии ассоциации «Отельные взгляды»
-					nav.footer__main-nav
-						-for(let key in items)
-							ul.footer__main-items
-								li.footer__main-header= key
-									-for(let link of items[key])
-										li.footer__main-item
-											case link
-												when "field"
-													.footer__main-field
-														+field({placeholder: "Email", size: "medium", arrow: true})
-												default
-													a.footer__main-link(href="#")= link
-			.footer__submenu
-				.footer__submenu-container
-					span.footer__submenu-text Copyright © 2018 Toxin отель. Все права зачищены.
-					.footer__submenu-icons
-						each icon in icons
-							a.footer__submenu-icon(href="#")
-								img.footer__submenu-img(src=require(`root/images/${icon}.svg`).default)
-	+footer({})
+	//- include UI_kit/form-elements/components/field/field
