--- a/src/style.scss
+++ b/src/style.scss
@@ -7,7 +7,7 @@
 :root {
     font: normal normal .875em/1.2 Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    background: #E5E5E5;
+    // background: #E5E5E5;
 }
 
 *,
