--- a/src/UI_kit/colors-type/components/type/type.scss
+++ b/src/UI_kit/colors-type/components/type/type.scss
@@ -2,7 +2,6 @@
   max-width: 364px;
   display: flex;
   align-items: flex-start;
-  margin: 100px;
   justify-content: space-between;
   font-family: Montserrat;
   font-style: normal;
@@ -10,6 +9,7 @@
   font-size: 19px;
   color: rgba(31, 32, 65, 0.25);
   letter-spacing: 0.1px;
+  text-transform: uppercase;
 }
 
 .type_size-h2 {
@@ -18,15 +18,19 @@
 }
 
 .type_size-h3 {
-  max-width: 325px;
+  max-width: 328px;
   font-size: 9px;
   text-transform: uppercase;
+  padding-left: 10px;
 }
 
 .type_size-body {
-  max-width: 303px;
+  max-width: 296px;
   font-size: 11px;
   line-height: 19px;
+  text-transform: none;
+  padding-left: 0px;
+  margin-left: -7px;
 }
 
 .type__description {
@@ -37,6 +41,7 @@
   color: #1F2041;
   letter-spacing: -0.28px;
   flex-basis: 319px;
+  text-transform: none;
 }
 
 .type__description_size-h2 {
@@ -49,12 +54,14 @@
   line-height: 10px;
   letter-spacing: 0.4px;
   font-family: Montserrat;
+  text-transform: uppercase;
+  flex-basis: 282px;
 }
 
 .type__description_size-body {
   line-height: 19px;
   font-family: Montserrat;
   font-weight: 500;
-  flex-basis: 250px;
+  flex-basis: 244px;
   letter-spacing: 0.1px;
 }
