--- a/src/style.scss
+++ b/src/style.scss
@@ -3,7 +3,7 @@
 @import "./fonts/fonts";
 // @import 'FEcomponents/button/button';
 @import 'FEcomponents/field/field';
-// @import "root/UI_kit/cards/components/calendar/calendar";
+@import "root/UI_kit/colors-type/components/type/type";
 :root {
     font: normal normal .875em/1.2 Arial, Helvetica, sans-serif;
     box-sizing: border-box;
