--- a/src/UI_kit/form-elements/components/button/button.pug
+++ b/src/UI_kit/form-elements/components/button/button.pug
@@ -1,14 +1,4 @@
-mixin button(options = {theme: "transparent", size: "small", arrow: false, text: "создать", textColor: "purple", height: "default"})
-    -
-        if (!options)
-            var options = {theme: 'transparent', size: 'small', arrow: false, text: 'click me', textColor: 'purple'}
-        let classWrapper = "btn-wrapper"
-        let classBtn = "btn"
-        classWrapper += options.theme === "none" ? " btn-wrapper_theme-none" : ""
-        classBtn += ` btn_theme-${options.theme || "default"} btn_size-${options.size || "default"} btn_text_color_${options.textColor || "default"} btn_height-${options.height || 'default'}`
-    
-    div(class=classWrapper)   
-        input(value=options.text type="submit" class=classBtn)
-        if (options.arrow)
-            svg(class="btn__arrow" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg")
-                path(d="M9 0.984375L17.0156 9L9 17.0156L7.59375 15.6094L13.1719 9.98438H0.984375V8.01562H13.1719L7.59375 2.39062L9 0.984375Z" fill="white")
+mixin button(options = {theme: "transparent", size: "small", arrow: false, link_text: "click me", color: "purple"})
+	.button(class=`button_theme-${options.theme} button_size-${options.size}`)
+		.button__wrapper(class=`button__wrapper_theme-${options.theme} button__wrapper_arrow-${options.arrow || false}`)
+			a.button__link(class=`button__link_color-${options.color}` href="#")= options.link_text
