--- a/src/UI_kit/cards/components/calendar/calendar.scss
+++ b/src/UI_kit/cards/components/calendar/calendar.scss
@@ -27,6 +27,7 @@
         box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
         border-radius: 4px;
         z-index: 999;
+        width: 100%;
         
         &--content {
             padding: 3px 0px 0px 11px;
