--- a/src/UI_kit/form-elements/components/dropdown/dropdown.scss
+++ b/src/UI_kit/form-elements/components/dropdown/dropdown.scss
@@ -1,251 +1,226 @@
 @import "../button/button";
 @import "/UI_kit/cards/components/calendar/calendar";
+
 .dropdown-wrapper {
-    display: inline-flex;
-    width: 272px;
-    justify-content: space-between;
+	display: inline-flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-flow: row wrap;
+	max-width: 320px;
 }
 
-.dropdown {
+.dropdown {	
+	max-width: 267px;
+	&_size-large {
+		max-width: 321px;
+	}
+	&_size-small {
+		max-width: 150px;
+	}
+	&_size-medium {
+		max-width: 266px;
+	}
+
+	&__from {
+		margin-right: 20px;
+	}
+
+	&__title {
+		font: normal bold 12px/15px Montserrat;
+		text-transform: uppercase;
+		color: #1F2041;
+		line-height: 25px;
+	}
+
+	&__field-wrapper {
+		position: relative;
+	}
+
+	&__field-wrapper::after {
+		content: '';
+		position: absolute;
+		display: inline-block;
+		background-image: url('/images/expand.svg');
+		background-position: center center;
+		background-size: cover;
+		width: 14px;
+    height: 8px;
+    top: 19px;
+		right: 17px;
+		transition: all .2s ease;
+		z-index: -1;
+	}
+
+	&__field-wrapper_expanded::after {
+		transform: rotate(180deg);
+	}
+
+	&__field {
+		width: 100%;
+		border: 1px solid rgba(31, 32, 65, 0.25);
+		border-radius: 0.2em;
+		border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+		padding: 10px 10px 11px 13px;
+		background: transparent;
+		
+		font: normal normal 14px/21px Montserrat;
+    text-overflow: ellipsis;
+    letter-spacing: 0.5px;
+		color: rgba(31, 32, 65, 0.75);
+		cursor: pointer;
+	}
+
+	&__field::placeholder {
+		color: rgba(31, 32, 65, 0.25);
+		letter-spacing: 0.2px;
+	}
+
+	&__field_checked {
+		border: 1px solid rgba(31, 32, 65, 0.5);
+		border-bottom-right-radius: 0px;
+		border-bottom-left-radius: 0px;
+	}
+
+	&__field_type-list {
+		border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+	}
+
+	&__items-wrapper {
+		display: none;
+		max-width: 284px;
     position: relative;
-    display: inline-flex;
-    flex-direction: column;
-    
-    &::after {
-        content: '';
-        background-image: url('/images/expand.svg');
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        width: 10px;
-        height: 10px;
-        position: absolute;
-        top: 30px;
-        right: 12px;
-        z-index: 1;
-    }
-    
-    &__title {
-        font-family: Montserrat;
-        font-weight: bold;
-        font-size: 9px;
-        line-height: 15px;
-        text-transform: uppercase;
-        color: #1F2041;
-        letter-spacing: 0.4px;
-        margin-bottom: 2px;
-    }
+	}
 
-    &__field {
-        width: 256px;
-        height: 36px;
-        border: 1px solid rgba(31, 32, 65, 0.25);
-        border-radius: 2px;
-        padding: 0 22px 0 10px;
-        background: transparent;
+	&__items-wrapper_size-large {
+		max-width: 341px;
+	}
 
-        text-overflow: ellipsis;
-        font-family: Montserrat;
-        font-weight: normal;
-        font-size: 11px;
-        color: rgba(31, 32, 65, 0.75);
-        letter-spacing: 0.1px;
+	&__items-wrapper_size-medium {
+		max-width: 284px;
+	}
 
-        cursor: pointer;
+	&__items-wrapper_display-true {
+		display: block;
+	}
 
-        &_checked-true {
-            border: 1px solid rgba(31, 32, 65, 0.5);
-            border-bottom-right-radius: 0px;
-            border-bottom-left-radius: 0px;
-        }
+	&__items {
+		position: absolute;
+		top: 0;
+    left: 0;
+		right: 0;
+		display: flex;
+		flex-flow: column;
+		border: 1px solid rgba(31, 32, 65, 0.5);
+		border-top: transparent;
+		border-radius: 0.2em;
+		border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    padding: 2.5px 6px 0px 14px;
+    overflow: hidden;
+		background: #FFFFFF;
+		z-index: 999;
+	}
 
-        &_size-large {
-            width: 256px;
-        }
+	&__item {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+		margin-bottom: 6.4px;
+	}
 
-        &_size-medium {
-            width: 213px;
-        }
+	&__category {
+		flex-basis: 62.1%;
+    font: normal bold 12px/15px Montserrat;
+    text-transform: uppercase;
+    color: #1F2041;
+    letter-spacing: 0.1px;
+	}
 
-        &_size-small {
-            width: 120px;
-        }
+	&__category_size-medium {
+		flex-basis: 62.1%;
+	}
 
-        &::placeholder {
-            font-family: Montserrat;
-            font-weight: normal;
-            font-size: 11px;
-            color: rgba(31, 32, 65, 0.75);
-            letter-spacing: 0.1px;
-        }
+	&__category_size-large {
+		flex-basis: 69%;
+	}
 
-        &:hover {
-            border: 1px solid rgba(31, 32, 65, 0.5);
-        }
-    }
+	&__change-panel {
+    display: flex;
+    flex-flow: row;
+    flex-basis: 37.2%;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 1px;
+	}
 
-    &__items {
-        display: none;
-        width: 213px;
-        background: #FFFFFF;
-        border: 1px solid rgba(31, 32, 65, 0.5);
-        border-radius: 2px;
-        padding-left: 11px;
-        padding-right: 5px;
-        padding-top: 3px;
-        border-top: transparent;
-        border-top-right-radius: 0px;
-        border-top-left-radius: 0px;
-        position: absolute;
-        top: 52.5px;
-        z-index: 999;
-        
-        &_display-true {
-            display: block;
-        }
+	&__change-panel_size-medium {
+		flex-basis: 37.2%;
+	}
 
-        &_size-large {
-            width: 256px;
-        }
+	&__change-panel_size-large {
+		flex-basis: 31%;
+	}
 
-        &_size-medium {
-            width: 213px;
-        }
-    }   
+	&__substract {
+		padding: 4px 11px 2px 11px;
+		border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 22px;
+		font: normal normal 18px/22px Montserrat;
+    color: rgba(31, 32, 65, 0.5);
+		text-align: center;
+		cursor: pointer;
+	}
 
-    &__item {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 5.5px;
-    }
+	&__substract_disabled {
+		cursor: not-allowed;
+		opacity: .5;
+	}
 
-    &__change-panel {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        flex-basis: 38%;
-    }
+	&__number {
+		font: normal bold 12px/15px Montserrat;
+    text-align: center;
+    text-transform: uppercase;
+    color: #1F2041;
+	}
 
-    &__category {
-        line-height: 15px;
-        font-size: 9px;
-        color: #1F2041;
-        font-family: Montserrat;
-        font-weight: bold;
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
-    }          
+	&__add {
+		font: normal normal 18px/22px Montserrat;
+    color: rgba(31, 32, 65, 0.5);
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 22px;
+    text-align: center;
+		padding: 3px 10px 2px 8px;
+		cursor: pointer;
+	}
 
-    &__substract {
-        width: 24px;
-        height: 24px;
-        font-family: Montserrat;
-        font-size: 9px;
-        line-height: 22px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 1px solid rgba(31, 32, 65, 0.25);
-        border-radius: 22px;
-        color: rgba(31, 32, 65, 0.5);
-        cursor: pointer;
+	&__buttons-wrapper {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: flex-end;
+	}
 
-        &_disabled-true {
-            cursor: not-allowed;
-            opacity: .5;
-        }
-    }
-     
+	&__buttons-wrapper_justify_content-space-between {
+		justify-content: space-between;
+	}
 
-    &__number {
-        font-family: Montserrat;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 9px;
-        line-height: 15px;
-        text-align: center;
-        text-transform: uppercase;
-        color: #1F2041;
-    }
-    
+	&__button-clear {
+		display: none;
+	}
 
-    &__add {
-        width: 24px;
-        height: 24px;
-        border: 1px solid rgba(31, 32, 65, 0.25);
-        border-radius: 22px;
-        font-family: Montserrat;
-        font-size: 11px;
-        line-height: 22px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: rgba(31, 32, 65, 0.5);
-        cursor: pointer;
-    }
-
-    &__buttons-wrapper {
-        display: flex;
-        justify-content: flex-end;
-        padding-top: 12px;
-        padding-bottom: 10px;
-        
-        &_justify-content_space-between {
-            justify-content: space-between;
-        }
-    }
-
-    &__btn-clear {
-        margin-left: -11px;
-        display: none;
-
-        &_display-true {
-            display: block;
-        }
-    }
-
-    &__btn-apply {
-        margin-right: -5px;
-        z-index: 10;
-    }
+	&__button-clear_display-true {
+		display: inline-block;
+	}
 
 }
 
-.datepicker__date-type_filter {
-    top: 5px !important;
-    left: 0px !important; 
+.datepicker-inline {
+	.datepicker {
+			&__date-type_from-to {
+			width: 255px;
+			top: 40px;
+			left: -285px;
+		}
+	}
 }
-
-.datepicker__date-type_from-to {
-    width: 255px !important;
-    top: 56px !important;
-    left: -272px !important;
-}
-   
-
-//     & .dropdown__amount
-//         width: 128px
-//         height: 24px
-//         font-family: Montserrat
-//         font-style: normal
-//         font-weight: normal
-//         font-size: 11px
-//         line-height: 24px
-//         color: rgba(31, 32, 65, 0.75)
-//         overflow: hidden
-//         text-overflow: ellipsis
-//         border: none
-//         letter-spacing: 0.1px
-    
-//     & .dropdown__extend 
-//         height: 89%
-//         font-style: normal
-//         font-weight: normal
-//         font-size: 20px
-//         line-height: 22px
-//         color: rgba(31, 32, 65, 0.75)
-//         text-align: center
-//         display: flex
-//         align-items: center
-//         justify-content: center
-//         cursor: pointer
