--- a/src/index.pug
+++ b/src/index.pug
@@ -21,10 +21,10 @@ html(lang="en")
 				.form-elements__field-subscription
 					+field({placeholder: "Email", arrow: true, label: true, label_text: "subscription text field", size: "medium"})
 		//- ---------------------------------------------------------------------------------------------------------------------------
-
+	
 		//- ---------------------------------------------------------------------------------------------------------------------------
-		.container
-			+dropdown({type: "default", list: ['спальни', 'кровати', 'ванные комнаты'], buttons: false, title: "dropdown", size: "default", id: 9})
-			+dropdown({type: "default", list: ['взрослые', 'дети', 'младенцы'], buttons: true, title: "dropdown", size: "large", id: 12})
-			+dropdown({type: "filter", buttons: true, title: "dropdown", size: "medium", id: 10})
-			+dropdown({type: "date", buttons: true, placeholder: "ДД.ММ.ГГГГ", title: ["DATE DROPDOWN","DATE DROPDOWN"], size: "small", id: 55})
+		//- .container
+		//- 	+dropdown({type: "default", list: ['спальни', 'кровати', 'ванные комнаты'], buttons: false, title: "dropdown", size: "default", id: 9})
+		//- 	+dropdown({type: "default", list: ['взрослые', 'дети', 'младенцы'], buttons: true, title: "dropdown", size: "large", id: 12})
+		//- 	+dropdown({type: "filter", buttons: true, title: "dropdown", size: "medium", id: 10})
+		//- 	+dropdown({type: "date", buttons: true, placeholder: "ДД.ММ.ГГГГ", title: ["DATE DROPDOWN","DATE DROPDOWN"], size: "small", id: 55})
