--- a/src/UI_kit/form-elements/components/toggle/toggle.scss
+++ b/src/UI_kit/form-elements/components/toggle/toggle.scss
@@ -1,70 +1,56 @@
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
+.toggle {
+	display: inline-block;
 
-:root {
-    font-size: 10px;
-    box-sizing: border-box
-}
+	&__text {
+		font: 14px/24px Montserrat;
+    color: rgba(31, 32, 65, 0.75);
+	}
+	
+	&__button {
+		opacity: 0;
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		width: 39px;
+    height: 20px;
+	}
 
-.switch {
-    display: inline-flex;
-    &__btn {
-        width: 29px;
-        height: 14px;
-        display: inline-block;
-        position: relative;
-    }
+	&__handle {
+		position: relative;
+		padding-left: 51px;
+	}
 
-    &__handle {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        border-radius: 30px;
-        box-shadow: 0 0 0 1px rgba(31, 32, 65, 0.25), 0 0 4px rgba(31, 32, 65, 0.25);
-        border: 2px solid transparent;
-        overflow: hidden;
-        cursor: pointer;
+	&__handle::before {
+    content: "";
+    position: absolute;
+		top: -1px;
+    left: 2px;
+    width: 39px;
+    height: 20px;
+    background: transparent;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 10px;
+	}
 
-        &::before {
-            position: absolute;
-            content: "";
-            width: 42%;
-            height: 99%;
-            background: rgba(31, 32, 65, 0.25);
-            border-radius: 30px;
-            transform: translateX(0px);
-            transition: all ease 0.2s;
-        }
-    }
+	&__handle::after {
+		content: "";
+    position: absolute;
+		top: 3px;
+    left: 6px;
+    width: 12px;
+    height: 12px;
+    background: rgba(31, 32, 65, 0.25);
+		border-radius: 10px;
+		transition: all .2s ease;
+	}
 
-    &__checkbox {
-       display: none;
-       
-       &:checked + .switch__handle::before{
-            background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-            transform: translateX(14px);
-       }
+	&__button:checked + &__handle::before {
+		border: 1px solid #BC9CFF;
+	}
 
-       &:checked + .switch__handle {
-            box-shadow: 0 0 0 1px #BC9CFF, 0 0 4px #BC9CFF;
-       }
-    }
-
-    &__text {
-        margin-left: 8px;
-        font-family: Montserrat;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 12px;
-        letter-spacing: -.5px;
-        color: rgba(31, 32, 65, 0.75); 
-    }
+	&__button:checked + &__handle::after {
+		background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+		left: 25px;
+	}
 }
