--- a/src/UI_kit/form-elements/components/rate/rate.pug
+++ b/src/UI_kit/form-elements/components/rate/rate.pug
@@ -1,20 +1,20 @@
-mixin rate(options = {amount: 5, fill: 5})
-    .rate
-        -let amount = options.amount || 5;
-        -for(let i = 1; i <= amount; i++)
-            if (i <= options.fill)
-                span.rate__star.rate__star_selected
-                    svg.rate__svg.rate__svg_selected(width="21" height="20" viewBox="0 0 20 19" xmlns="http://www.w3.org/2000/svg")
-                        path(d="M10 15.25L3.8125 19L5.45312 11.9688L0.015625 7.23438L7.1875 6.625L10 0.015625L12.8125 6.625L19.9844 7.23438L14.5469 11.9688L16.1875 19L10 15.25Z" fill="url(#paint0_linear)")
-                        defs
-                            linearGradient(id="paint0_linear" x1="10.264" y1="-1.501" x2="10.264" y2="22.499" gradientUnits="userSpaceOnUse")
-                                stop(offset="0" stop-color="#BC9CFF")
-                                stop(offset="1" stop-color="#8BA4F9")
-            else
-                span.rate__star
-                    svg.rate__svg(width="21" height="20" viewBox="0 0 20 19" xmlns="http://www.w3.org/2000/svg")
-                        path(d="M10 13.4219L13.75 15.6719L12.7656 11.4062L16.0938 8.5L11.6875 8.125L10 4.09375L8.3125 8.125L3.90625 8.5L7.23438 11.4062L6.25 15.6719L10 13.4219ZM19.9844 7.23438L14.5469 11.9688L16.1875 19L10 15.25L3.8125 19L5.45312 11.9688L0.015625 7.23438L7.1875 6.625L10 0.015625L12.8125 6.625L19.9844 7.23438Z" fill="url(#paint0_linear)")
-                        defs
-                            <linearGradient id="paint0_linear" x1="10" y1="-2" x2="10" y2="22" gradientUnits="userSpaceOnUse">
-                                stop(offset="0" stop-color="#BC9CFF")
-                                stop(offset="1" stop-color="#8BA4F9")
+mixin rate(options = {count: 5, fill: 5})
+	-const count = options.count || 5;
+	.rate
+		-for (let i = 1; i <= count; i++)
+			if (i <= options.fill)
+				span.rate__star.rate__star_selected
+					svg.rate__svg.rate__svg_selected(width="21" height="20" viewBox="0 0 20 19" xmlns="http://www.w3.org/2000/svg")
+						path(d="M10 15.25L3.8125 19L5.45312 11.9688L0.015625 7.23438L7.1875 6.625L10 0.015625L12.8125 6.625L19.9844 7.23438L14.5469 11.9688L16.1875 19L10 15.25Z" fill="url(#paint0_linear)")
+						defs
+							linearGradient(id="paint0_linear" x1="10.264" y1="-1.501" x2="10.264" y2="22.499" gradientUnits="userSpaceOnUse")
+								stop(offset="0" stop-color="#BC9CFF")
+								stop(offset="1" stop-color="#8BA4F9")
+			else
+				span.rate__star
+					svg.rate__svg(width="21" height="20" viewBox="0 0 20 19" xmlns="http://www.w3.org/2000/svg")
+						path(d="M10 13.4219L13.75 15.6719L12.7656 11.4062L16.0938 8.5L11.6875 8.125L10 4.09375L8.3125 8.125L3.90625 8.5L7.23438 11.4062L6.25 15.6719L10 13.4219ZM19.9844 7.23438L14.5469 11.9688L16.1875 19L10 15.25L3.8125 19L5.45312 11.9688L0.015625 7.23438L7.1875 6.625L10 0.015625L12.8125 6.625L19.9844 7.23438Z" fill="url(#paint0_linear)")
+						defs
+							linearGradient(id="paint0_linear" x1="10" y1="-2" x2="10" y2="22" gradientUnits="userSpaceOnUse")
+								stop(offset="0" stop-color="#BC9CFF")
+								stop(offset="1" stop-color="#8BA4F9")
