--- a/src/UI_kit/form-elements/components/rate/rate.scss
+++ b/src/UI_kit/form-elements/components/rate/rate.scss
@@ -1,31 +1,17 @@
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
-:root {
-    font-size: 10px;
-    box-sizing: border-box
-}
-
-
 .rate {
-    display: flex;
-    cursor: pointer;
-}
+	display: flex;
+	cursor: pointer;
 
-.rate__star:nth-child(n):not(:last-child) {
-    margin-right: 4px;
-}
+	&__svg {
+    width: 20px;
+    height: 20px;
+	}
 
-.rate__svg {
-    width: 15px;
-    height: 15px;
-}
+	&__svg_selected path {
+		fill: url(#paint0_linear);
+	}
 
-.rate__svg_selected path {
-    fill: url(#paint0_linear);
+	&__star:nth-child(n):not(:last-child) {
+		margin-right: 4px;
+	}
 }
