--- a/src/UI_kit/form-elements/components/checkbox-list/checkbox_list.pug
+++ b/src/UI_kit/form-elements/components/checkbox-list/checkbox_list.pug
@@ -1,19 +1,12 @@
-        h1 Hello world
-        -
-            let list = [
-                'Завтрак', 
-                'Письменный стол', 
-                'Стул для кормления', 
-                'Кроватка', 
-                'Телевизор', 
-                'Шампунь'
-                ]
-        .checkbox-list
-            .checkbox-list__panel
-                span(class="checkbox-list__name") example text
-                span(class="checkbox-list__extend material-icons") keyboard_arrow_down
-            .checkbox-list__fields-wrapper 
-                each category in list  
-                    label.checkbox-list__field   
-                        input(type="checkbox" class="checkbox-list__select")
-                        span(class="checkbox-list__category")= category
+include UI_kit/form-elements/components/checkbox/checkbox
+mixin checkbox-list(options = {name: "checkbox-list"})
+	-
+		const list = ["Завтрак", "Письменный стол", "Стул для кормления", "Кроватка", "Телевизор", "Шампунь"]
+	.checkbox-list
+		label.checkbox-list__panel= options.name
+			input.checkbox-list__check(type="checkbox")
+			span.checkbox-list__expand-icon
+			.checkbox-list__items
+				each text in list
+					.checkbox-list__item
+						+checkbox({text: text, weight: "normal"})
