--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 @import "./fonts/fonts";
 @import 'FEcomponents/field/field';
 @import 'FEcomponents/button/button';
+@import 'FEcomponents/checkbox/checkbox';
 @import "root/UI_kit/cards/components/calendar/calendar";
 :root {
     font: normal normal .875em/1.2 Arial, Helvetica, sans-serif;
