Refactored checkbox-rich

--- a/src/UI_kit/form-elements/components/checkbox/checkbox.scss
+++ b/src/UI_kit/form-elements/components/checkbox/checkbox.scss
@@ -1,8 +1,8 @@
 .checkbox {
 	position: relative;
 	padding-left: 30px;
-	max-width: 221px;
-	display: inline-block;
+	// max-width: 221px;
+	// display: inline-block;
 
 	&__label {
 		display: inline-block;
