--- a/src/UI_kit/form-elements/components/checkbox-rich/checkbox-rich.scss
+++ b/src/UI_kit/form-elements/components/checkbox-rich/checkbox-rich.scss
@@ -1,46 +1,27 @@
 @import 'FEcomponents/checkbox/checkbox';
-
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
-:root {
-    font-size: 10px;
-    box-sizing: border-box;
-}
-
 .checkbox-rich {
-    display: flex;
-    flex-direction: column;
-    padding-left: 0px;
-    max-width: 205px;
-    
-    &__title {
-        font-family: Montserrat;
-        font-weight: bold;
-        font-size: 10px;
-        line-height: 15px;
-        text-transform: uppercase;
-        color: #1F2041;
-        letter-spacing: -0.25px;
-        margin-bottom: 13px;
-    }
+	max-width: 255px;
+	&__title {
+		font: normal bold 12px/15px Montserrat;
+		text-transform: uppercase;
+		color: #1F2041;
+	}
 
-    &__item {
-        margin-bottom: 7px;
-    }
+	&__item:first-child {
+		margin-top: 16px;
+	}
 
-    &__description {
-        font-family: Montserrat;
-        font-weight: normal;
-        font-size: 10px;
-        line-height: 12px;
-        color: rgba(31, 32, 65, 0.5);
-        padding-left: 25px;
-        letter-spacing: -0.25px;
-    }
+	&__item:not(:last-child) {
+		margin-bottom: 10px;
+	}
+
+	&__checkbox {
+		margin-bottom: 7px;
+	}
+
+	&__description {
+		font: normal normal 12px/14px Montserrat;
+		color: rgba(31, 32, 65, 0.5);
+		padding-left: 30px;
+	}
 }
