Refactored bullet-list

--- a/src/UI_kit/form-elements/components/bullet-list/bullet-list.pug
+++ b/src/UI_kit/form-elements/components/bullet-list/bullet-list.pug
@@ -1,11 +1,9 @@
 mixin bullet-list(options = {items: [], title: "bullet list"})
-    -
-        let items = options.items 
-        ? options.items 
-        : ["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"]
-    
-    .bullet-list
-        span.bullet-list__title= options.title
-        ul.bullet-list__items
-            each item in items
-                li.bullet-list__item= item
+	-
+		const items = options.items || ["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"]
+	.bullet-list
+		span.bullet-list__title= options.title
+		ul.bullet-list__items
+			each item in items
+				.bullet-list__item-wrapper
+					li.bullet-list__item= item
